🔧 Fix Angular CLI issue: use npx and install @angular/cli globally in workflow

--- a/.github/workflows/Portfolio-API-build.yaml
+++ b/.github/workflows/Portfolio-API-build.yaml
@@ -35,6 +35,9 @@ jobs:
         with:
           node-version: v22.x
 
+      - name: Install Angular CLI
+        run: npm install -g @angular/cli
+
       - name: Build Node assets
         env:
           CI: true
