--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "API REST pour un portfolio professionnel",
   "main": "server.js",
   "scripts": {
-    "build:frontend": "cd frontend && npm install && npm run build -- --configuration production && cd ..",
+    "build:frontend": "cd frontend && npm install && npx ng build --configuration production && cd ..",
     "start": "node server.js",
     "build": "npm run build:frontend",
     "dev": "nodemon server.js",
