🔧 Use specific Angular CLI version 20.2.0 to fix builder package issue

--- a/.github/workflows/Portfolio-API-build.yaml
+++ b/.github/workflows/Portfolio-API-build.yaml
@@ -49,7 +49,10 @@ jobs:
           FRONTEND_URL: ${{ inputs.site-url }}
         run: |
           npm install
-          npm run build
+          cd frontend
+          npm ci
+          npx @angular/cli@20.2.0 build --configuration production
+          cd ..
           ls -la dist/browser/
 
 # Please do not touch the following action
