🔧 Use npm install instead of npm ci and regenerate package-lock.json

--- a/.github/workflows/Portfolio-API-build.yaml
+++ b/.github/workflows/Portfolio-API-build.yaml
@@ -50,7 +50,7 @@ jobs:
         run: |
           npm install
           cd frontend
-          npm ci --legacy-peer-deps
+          npm install --legacy-peer-deps
           npx ng build --configuration production
           cd ..
           ls -la dist/browser/
