--- a/.deploy-now/Portfolio-API/config.yaml
+++ b/.deploy-now/Portfolio-API/config.yaml
@@ -1,30 +1,19 @@
-# IONOS Deploy Now Configuration
+# IONOS Deploy Now Configuration for Static Angular App
 ---
-# This configuration tells IONOS to run your app as a Node.js application
-runtime: nodejs18
+version: 2
 
-# Start command for your Node.js server
-start: node server.js
+# Static site configuration (no Node.js runtime needed)
+runtime: static
 
-# Environment variables for production
-env:
-  NODE_ENV: production
+# No start command needed for static sites
+# start: not needed for static
 
-# Build configuration
-build:
-  commands:
-    - npm ci --production
-    - cd frontend && npm ci && npm run build
-  
-# Static files to serve (for assets)
+# No environment variables needed for static deployment
+# env: not needed
+
+# No build commands - files are already compiled
+# build: not needed
+
+# Static files configuration
 static:
-  - path: /dist/browser
-    fallback: index.html
-
-# Port configuration (IONOS will override this)
-port: 3000
-
-# Health check endpoint
-healthcheck:
-  path: /api/portfolio
-  timeout: 30
+  folder: ./
