--- a/.deploy-now/Portfolio-API/config.yaml
+++ b/.deploy-now/Portfolio-API/config.yaml
@@ -1,19 +1,3 @@
-# IONOS Deploy Now Configuration for Static Angular App
----
-version: 2
-
-# Static site configuration (no Node.js runtime needed)
-runtime: static
-
-# No start command needed for static sites
-# start: not needed for static
-
-# No environment variables needed for static deployment
-# env: not needed
-
-# No build commands - files are already compiled
-# build: not needed
-
-# Static files configuration
-static:
-  folder: ./
+# IONOS Deploy Now Configuration
+# Static Angular application
+version: 1
