--- a/.deploy-now/Portfolio-API/config.yaml
+++ b/.deploy-now/Portfolio-API/config.yaml
@@ -1,3 +1,14 @@
 # IONOS Deploy Now Configuration
-# Static Angular application
+# Static Angular application from dist/browser folder
 version: 1
+
+# Build commands to generate dist/browser
+build:
+  commands:
+    - npm install
+    - cd frontend && npm install --legacy-peer-deps
+    - cd frontend && npx ng build --configuration production
+
+# Static site configuration pointing to dist/browser
+static:
+  folder: ./
