--- a/.github/workflows/Portfolio-API-build.yaml
+++ b/.github/workflows/Portfolio-API-build.yaml
@@ -14,7 +14,7 @@ on:
         type: string
 
 env:
-  DEPLOYMENT_FOLDER: dist/browser
+  DEPLOYMENT_FOLDER: ./
 
 jobs:
 # Please do not rename this job
@@ -32,13 +32,13 @@ jobs:
         with:
           node-version: v22.x
 
-      - name: Deploy pre-built Angular app
+      - name: Prepare for IONOS build and deployment
         env:
           CI: true
         run: |
-          echo "Deploying pre-built Angular application from dist/browser/"
-          ls -la dist/browser/
-          echo "✅ Static files ready for deployment"
+          echo "✅ Source files ready - IONOS will build Angular app"
+          echo "Build commands defined in .deploy-now/Portfolio-API/config.yaml"
+          ls -la
 
 # Please do not touch the following action
       - name: Store deployment content
